[gd_scene load_steps=5 format=3 uid="uid://by0lc38guplku"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_28mxw"]

[sub_resource type="Gradient" id="Gradient_lqcqk"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.051, 0.051, 0.17, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t2f2p"]
gradient = SubResource("Gradient_lqcqk")

[sub_resource type="LabelSettings" id="LabelSettings_4ftxt"]
font_size = 64

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -180.0
offset_right = -320.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28mxw")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_t2f2p")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -209.0
offset_top = 15.0
offset_right = 209.0
offset_bottom = 103.0
grow_horizontal = 2
text = "PONG-CLONE"
label_settings = SubResource("LabelSettings_4ftxt")

[node name="Button Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -19.0
offset_right = 52.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2

[node name="Singleplayer" type="Button" parent="Button Container"]
layout_mode = 2
text = "Singleplayer
"

[node name="Multiplayer" type="Button" parent="Button Container"]
layout_mode = 2
text = "Multiplayer"

[node name="Settings" type="Button" parent="Button Container"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="Button Container"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Button Container/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="Button Container/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Button Container/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Button Container/Exit" to="." method="_on_exit_pressed"]
